Update users manager

--- a/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/products/products.component.html
@@ -60,7 +60,7 @@
       </div>
       <div class="card-body p-0">
         <div class="table-responsive p-3">
-          <table datatable [dtOptions]="dtOptions" class="table table-hover table-borderless table-sm w-100">
+          <table datatable [dtOptions]="dtOptions" class="table table-hover table-borderless table-sm nowrap w-100">
             <thead class="table-primary">
             <tr>
               <th class="align-middle">Ảnh</th>
