Update front end

--- a/deskover-ecommerce-website/src/main/resources/templates/components/header.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/header.html
@@ -17,4 +17,6 @@
     <link rel="stylesheet" media="screen" th:href="@{/vendor/drift-zoom/dist/drift-basic.min.css}" />
     <link rel="stylesheet" media="screen" th:href="@{/vendor/nouislider/dist/nouislider.min.css}" / >
     <link rel="stylesheet" media="screen" th:href="@{/vendor/lightgallery.js/dist/css/lightgallery.min.css}" />
+    <link rel="stylesheet" media="screen" th:href="@{/vendor/sweetalert2/dist/sweetalert2.min.css}" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
