--- a/deskover-ecommerce-website/src/main/resources/templates/register.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/register.html
@@ -2,7 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-    <title>Login</title>
+    <title>Register</title>
     <th:block th:include="components/header.html :: header"></th:block>
     <style>
         body {
@@ -36,7 +36,7 @@
                         <div class="card-body mt-5">
                             <h2 class="h4 mb-3">Đăng kí</h2>
 
-                            <form class="woocommerce-form woocommerce-form-login login" method="post" th:action="@{/user/login}">
+                            <form class="woocommerce-form woocommerce-form-login login" method="post" th:action="@{/register}" th:object="${register}">
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group">
                                     <label for="username"> Email <span class="text-danger">*</span></label>
                                     <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="username" id="username" autocomplete="username" value="">
@@ -55,7 +55,7 @@
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group mt-4">
                                     <label for="password"> Nhập lại mật khẩu<span class="text-danger">*</span></label>
                                     <div class="password-toggle">
-                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="password" id="password" autocomplete="current-password"><span class="show-password-input"></span></span>
+                                        <span class="password-input"><input class="woocommerce-Input woocommerce-Input--text input-text form-control" type="password" name="confirmPassword" id="password" autocomplete="current-password"><span class="show-password-input"></span></span>
                                         <label class="password-toggle-btn">
                                             <input class="custom-control-input" type="checkbox" hidden>
                                             <i class="czi-eye password-toggle-indicator"></i>
