--- a/deskover-ecommerce-website/src/main/resources/templates/shop.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/shop.html
@@ -122,7 +122,7 @@
                                 <select class="form-select" id="sorting" ng-model="shop.filter.sort" ng-change="shop.loadItems()">
                                     <option value="1">Giá thấp đến cao</option>
                                     <option value="2">Giá cao đến thấp</option>
-                                    <option value="3">Tất cả</option>
+                                    <option value="3">Danh mục</option>
                                     <option value="4">Thao tác A - Z</option>
                                     <option value="5">Thao tác Z - A</option>
                                 </select><span class="fs-sm text-light opacity-75 text-nowrap ms-2 d-none d-md-block">trên {{shop.totalItems}} sản phẩm</span>
