--- a/deskover-ecommerce-website/src/main/resources/templates/register.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/register.html
@@ -41,6 +41,10 @@
                                     <label for="username"> Email <span class="text-danger">*</span></label>
                                     <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="username" id="username" autocomplete="username" value="">
                                 </div>
+                                <div class="woocommerce-form-row woocommerce-form-row--wide form-group">
+                                    <label for="username"> Họ và tên <span class="text-danger">*</span></label>
+                                    <input type="text" class="woocommerce-Input woocommerce-Input--text input-text form-control" name="fullname" id="username" autocomplete="username" value="">
+                                </div>
                                 <div class="woocommerce-form-row woocommerce-form-row--wide form-group mt-4">
                                     <label for="password">Mật khẩu<span class="text-danger">*</span></label>
                                     <div class="password-toggle">
