--- a/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
+++ b/deskover-dashboard-website/src/app/components/home/manage/users/users.component.html
@@ -24,16 +24,16 @@
             <label [for]="'filter-active'" class="col-form-label">Trạng thái:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
-            <select id="filter-active" class="form-select" [(ngModel)]="isActive" (change)="filter()">
+            <select id="filter-active" class="form-select" [(ngModel)]="isActive" (change)="rerender()">
               <option [ngValue]="true">Hoạt động</option>
               <option [ngValue]="false">Chưa kích hoạt</option>
             </select>
           </div>
           <div class="col-auto">
-            <label [for]="'filter-active'" class="col-form-label">Quyền hạn:</label>
+            <label [for]="'filter-active'" class="col-form-label">Vai trò:</label>
           </div>
           <div class="col-md-auto col-sm-12 mt-0 mt-md-2">
-            <select id="filter-active" class="form-select" [(ngModel)]="roleFilter" (change)="filter()">
+            <select id="filter-active" class="form-select" [(ngModel)]="roleFilter" (change)="rerender()">
               <option [ngValue]="null">Tất cả</option>
               <option *ngFor="let role of roles" [ngValue]="role">{{role.name}}</option>
             </select>
@@ -45,10 +45,9 @@
           <table datatable [dtOptions]="dtOptions" class="table table-hover table-borderless table-sm nowrap w-100">
             <thead class="table-primary">
             <tr>
-              <th class="align-middle">Ảnh đại diện</th>
-              <th class="align-middle">Tên đăng nhập</th>
+              <th class="align-middle">Ảnh</th>
               <th class="align-middle">Họ và tên</th>
-              <th class="align-middle">Quyền hạn</th>
+              <th class="align-middle">Vai trò</th>
               <th class="align-middle text-center">Ngày cập nhật</th>
               <th class="align-middle text-center">Cập nhật bởi</th>
               <th class="align-middle text-center">Lần đăng nhập cuối</th>
@@ -63,15 +62,14 @@
                 </div>
               </td>
               <td class="align-middle">
-                {{ user.username }}
-              </td>
-              <td class="align-middle">
                 {{ user.fullname }}
               </td>
               <td class="align-middle">
-                <span class="badge bg-primary" *ngFor="let authority of user.authorities">
-                  {{ authority.role.name }}
-                </span>
+                <!--<span class="badge bg-primary">{{ user.authority.role.name }}</span>-->
+                <select class="form-select form-select-table"
+                        [(ngModel)]="user.authority.role.name" (change)="updateRole()">
+                  <option *ngFor="let role of roles" [ngValue]="role.name">{{role.name}}</option>
+                </select>
               </td>
               <td class="align-middle text-center">
                 {{ user.modifiedAt | date: 'dd/MM/yyyy' }}
@@ -80,7 +78,7 @@
                 {{ user.modifiedBy }}
               </td>
               <td class="align-middle text-center">
-                {{ user.lastLogin ? (user.lastLogin | date: 'dd/MM/yyyy'): '-' }}
+                {{ user.lastLogin ? (user.lastLogin | date: 'dd/MM/yyyy HH:mm:ss'): '-' }}
               </td>
               <td class="align-middle text-end">
                 <div *ngIf="isActive" class="d-flex align-items-center justify-content-end">
