Revert "Merge branch 'master' into hai-dev-be"
This reverts commit d5c61c18409be00c3fd3f9e1b1b6cb90c74169ea, reversing
changes made to 14511fdcb7ba19f37cecb1359198a04224ce7c6d.

--- a/deskover-ecommerce-website/src/main/resources/templates/components/footer.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/footer.html
@@ -3,22 +3,27 @@
         <div class="row pb-2">
             <div class="col-md-4 col-sm-6">
                 <div class="widget widget-links widget-light pb-2 mb-4">
-                    <h3 class="widget-title text-light">
-                        Công ty TNHH
-                        <br>
-                        <img class="bg-white rounded mt-2" src="/img/logo/full.png" width="200px" alt="Deskover">  
-                    </h3>
-                    <div class="mt-2 text-light"> 
-                        350-352 Võ Văn Kiệt, Phường Cô Giang, Quận 1, Thành phố Hồ Chí Minh, Việt Nam. Điện thoại: 028.7108.96
-                    </div>
+                    <h3 class="widget-title text-light">Shop departments</h3>
                     <ul class="widget-list">
-
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Sneakers &amp; Athletic</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Athletic Apparel</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Sandals</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Jeans</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Shirts &amp; Tops</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Shorts</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">T-Shirts</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Swimwear</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Clogs &amp; Mules</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Bags &amp; Wallets</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Accessories</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Sunglasses &amp; Eyewear</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Watches</a></li>
                     </ul>
                 </div>
             </div>
             <div class="col-md-4 col-sm-6">
                 <div class="widget widget-links widget-light pb-2 mb-4">
-                    <h3 class="widget-title text-light">Đường dẫn</h3>
+                    <h3 class="widget-title text-light">Account &amp; shipping info</h3>
                     <ul class="widget-list">
                         <li class="widget-list-item"><a class="widget-list-link" href="#">Your account</a></li>
                         <li class="widget-list-item"><a class="widget-list-link" href="#">Shipping rates &amp; policies</a></li>
@@ -28,13 +33,34 @@
                         <li class="widget-list-item"><a class="widget-list-link" href="#">Taxes &amp; fees</a></li>
                     </ul>
                 </div>
+                <div class="widget widget-links widget-light pb-2 mb-4">
+                    <h3 class="widget-title text-light">About us</h3>
+                    <ul class="widget-list">
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">About company</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Our team</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">Careers</a></li>
+                        <li class="widget-list-item"><a class="widget-list-link" href="#">News</a></li>
+                    </ul>
+                </div>
             </div>
             <div class="col-md-4">
                 <div class="widget pb-2 mb-4">
-
+                    <h3 class="widget-title text-light pb-1">Stay informed</h3>
+                    <form class="subscription-form validate" action="https://studio.us12.list-manage.com/subscribe/post?u=c7103e2c981361a6639545bd5&amp;amp;id=29ca296126" method="post" name="mc-embedded-subscribe-form" target="_blank" novalidate>
+                        <div class="input-group flex-nowrap"><i class="ci-mail position-absolute top-50 translate-middle-y text-muted fs-base ms-3"></i>
+                            <input class="form-control rounded-start" type="email" name="EMAIL" placeholder="Your email" required>
+                            <button class="btn btn-primary" type="submit" name="subscribe">Subscribe*</button>
+                        </div>
+                        <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                        <div style="position: absolute; left: -5000px;" aria-hidden="true">
+                            <input class="subscription-form-antispam" type="text" name="b_c7103e2c981361a6639545bd5_29ca296126" tabindex="-1">
+                        </div>
+                        <div class="form-text text-light opacity-50">*Subscribe to our newsletter to receive early discount offers, updates and new products info.</div>
+                        <div class="subscription-status"></div>
+                    </form>
                 </div>
                 <div class="widget pb-2 mb-4">
-                    <h3 class="widget-title text-light pb-1">Tải ứng dụng</h3>
+                    <h3 class="widget-title text-light pb-1">Download our app</h3>
                     <div class="d-flex flex-wrap">
                         <div class="me-2 mb-2"><a class="btn-market btn-apple" href="#" role="button"><span class="btn-market-subtitle">Download on the</span><span class="btn-market-title">App Store</span></a></div>
                         <div class="mb-2"><a class="btn-market btn-google" href="#" role="button"><span class="btn-market-subtitle">Download on the</span><span class="btn-market-title">Google Play</span></a></div>
