--- a/deskover-ecommerce-website/src/main/resources/templates/components/modal/quick_view.html
+++ b/deskover-ecommerce-website/src/main/resources/templates/components/modal/quick_view.html
@@ -69,8 +69,22 @@
                             </form>
                             <span ng-if="shop.item.spec">
                                 <h5 class="h6 mb-3 pb-2 border-bottom"><i class="ci-announcement text-muted fs-lg align-middle mt-n1 me-2"></i>Thông tin sản phẩm</h5>
-                                <span ng-bind-html="shop.item.spec">
-                                </span>
+                                <ul class="list-unstyled fs-sm pb-2">
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Model:</span><span>Amazfit Smartwatch</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Gender:</span><span>Unisex</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Smartphone app:</span><span>Amazfit Watch</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">OS campitibility:</span><span>Android / iOS</span></li>
+                                </ul>
+                            </span>
+
+                            <span>
+                                <h5 class="h6 mb-3 pb-2 border-bottom"><i class="ci-announcement text-muted fs-lg align-middle mt-n1 me-2"></i>Thông tin sản phẩm</h5>
+                                <ul class="list-unstyled fs-sm pb-2">
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Model:</span><span>Amazfit Smartwatch</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Gender:</span><span>Unisex</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">Smartphone app:</span><span>Amazfit Watch</span></li>
+                                    <li class="d-flex justify-content-between pb-2 border-bottom"><span class="text-muted">OS campitibility:</span><span>Android / iOS</span></li>
+                                </ul>
                             </span>
                         </div>
                     </div>
